@@ -1,3 +1,7 @@
+2010-07-02  Ken Werner  <ken.werner@de.ibm.com>
+
+	* c-valprint.c (c_val_print): Fix printing of character vectors.
+
 2010-07-02  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* spu-tdep.c (spu_catch_start): Adjust the caller of changed
